infra/k8s/notifications-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  namespace: default
spec:
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
        - name: notifications
          image: eliyait/taskly-notifications
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 1001
