infra/k8s/tasks-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
        - name: tasks
          image: eliyait/tasks
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: tasks-srv
spec:
  selector:
    app: tasks
  ports:
    - name: tasks
      protocol: TCP
      port: 4000
      targetPort: 4000
